# recipes-scanner

./: .gitignore  README.md  main.py  pyproject.toml
recipes_scanner/: __main__.py  args.py  ocr.py  pdf_scanner.py
