[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipes-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.17.1",
    "pdf2image>=1.17.0",
    "pydantic-ai>=0.7.2",
    "ruff>=0.12.9",
]

[project.scripts]
recipes-scanner = "recipes_scanner.__main__:main"
